Changelog
=========

5.8-dev - (unreleased)
----------------------

5.7 - (2012-11-29)
------------------
* Change: added customizations from productio for flas_js.dtml
  [ichimdav]
* Bug fix: fix @@rdf adapter for media field
  [tiberich #10130]

5.6 - (2012-11-22)
------------------
* Change: removed schema extender of location for Data content type 
  [ichimdav #9423]
* Change: merged values from relatedProducts field to relatedItems
  field for EEAFigure and Data objects.
  [ghicaale refs #6773]
* Bug fix: change rdfmarshaller modifiers to conform to API changes, added
  test for marshaller modifiers
  [tiberich #3981]
* Bug fix: use a field adapter instead of a full content adapter for the
  Article media, for the @@rdf view
  [tiberich #3981]

5.5 - (2012-10-04)
------------------
* Change: modify code to conform to api change in eea.rdfhmarshaller
  [tiberich #5545]

5.4 - (2012-09-27)
------------------
* Bug fix: Fixed error: Couldn't import eea.daviz.content.visualization,
  No module named visualization (eea.daviz 6.0 not-released yet)
  [voineali]
* Bug fix: fixed some layers not showing up. removed fixed extent.
  for gis applications template, now zoom defined on arcgis.com is applied.
  [demarant refs #5546]

5.3 - (2012-09-27)
------------------
* Feature: added rich text field to CloudVideo to bring it up to par with the
  file based video content
  [ichimdav #5480]
* Change: Update references to eea.daviz content
  [voineali refs #5420]
* Change: Update references to eea.depiction (formerly valentine.imagescales)
  [voineali refs #5497]
* Bug fix: removed unused protect_email transform
  [ghicaale refs #4926]

5.2 - (2012-08-28)
------------------
* Upgrade step: Manual step ask ichimdav to do it
  - Set images on CloudVideos to the renamed image field
  [ichimdav #5480]
* Upgrade step: under www/portal_types/CloudVideo/manage_aliases:
   - Set "base_edit" to edit method instead of atct_edit